Moved infusions into tablist data
-these should be treated like crafting recipes so they should be defined in data, not in the code (not to mention that the code shouldn't have any item ID references)